# wraptoken

./: CMakeLists.txt  README.txt  compile.sh  deployCustom.sh
include/: wraptoken.hpp
src/: CMakeLists.txt  wraptoken.cpp
tests/: deploy-eos.sh  run-build.sh
